# only-students-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  model.txt  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: chat.py  knowledge.py  mention.py  router.py  search.py
app/schemas/: __init__.py  request.py  response.py
app/services/: __init__.py  agent.py  llm.py  memory.py  rag.py
app/tools/: __init__.py  author_tool.py  note_reader.py  note_search.py  rag_tool.py  user_info.py
app/utils/: tokenizer.py
app/vector/: __init__.py  client.py  consumer.py  embedder.py  ingest.py
scripts/: build_index.py  run_consumer.py  sync_notes.py
tests/: test_agent.py  test_api.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: 000011.sst  IDENTITY  LOG  LOG.old.1774768431961141  LOG.old.1774849486445161  MANIFEST-000012  MANIFEST-000018
volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  IDENTITY  LOG  LOG.old.1774849481355144  MANIFEST-000010  MANIFEST-000016
volumes/minio/.minio.sys/: format.json
